Deleting the Unnecessary Projects

--- a/mockJsons/projects.json
+++ b/mockJsons/projects.json
@@ -1,1 +1,1 @@
-{"projectList":[{"name":"NAC"},{"name":"EVP"},{"name":"Hup"},{"name":"sasas"},{"name":"siva"},{"name":"1016"},{"name":"sasasasas"}]}
+{"projectList":[]}
